# technitium-dns-kube-controller

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: deploy-to-ghcr.yml  ruff-lint-on-pr.yml
chart/technitium-dns/: .helmignore  values.yaml
chart/technitium-dns/builds/: technitium-dns-0.1.0.tgz  technitium-dns-0.1.1.tgz  technitium-dns-0.1.2.tgz  technitium-dns-0.99.99.tgz
chart/technitium-dns/templates/: deployment.yaml  role_config.yaml
dns-kube-job/: main.py
technitium_dns_kube_controller/: main.py  new-main.py
