[tool.poetry]
name = "technitium-dns-kube-controller"
version = "1.0.1"
description = "Kubernetes controller to create zones and records in Technitium DNS"
authors = ["Aaron Steed <asteed7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
kopf = "^1.37.2"
loguru = "^0.7.2"
cerberus = "^1.3.5"

[tool.poetry.group.lint.dependencies]
ruff = "^0.12.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
